@@ -102,6 +102,8 @@
             </classpath>
             <compilerarg value="-Xmaxerrs"/><compilerarg value="100"/>
             <compilerarg value="-Xplugin:threadchecker.TCPlugin org.reflections"/>
+        	<!-- we use some private packages/classes currently: -->
+            <compilerarg line="--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"/>
         </compile>
     	<copy todir="${boot.build}">
     	    <fileset dir="${boot.resources}" />
@@ -120,7 +122,6 @@
 
             >
             <classpath>
-                <pathelement location="${build_java_home}/lib/tools.jar"/>
                 <pathelement location="${threadchecker.build}"/>
             </classpath>
         </compile>
@@ -147,7 +148,6 @@
                 <pathelement location="${threadchecker.build}"/>
                 <pathelement location="${threadchecker.pluginbuild}"/>
                 <pathelement location="${boot.jar}"/>
-                <pathelement location="${build_java_home}/lib/tools.jar"/>
             </classpath>
             <compilerarg value="-Xmaxerrs"/><compilerarg value="1000"/>
             <compilerarg value="-Xplugin:threadchecker.TCPlugin org.reflections"/>
@@ -168,7 +168,6 @@
                 <path refid="bluej.class.path"/>
                 <pathelement location="${boot.build}"/>
                 <pathelement location="${core.build}"/>
-                <pathelement location="${build_java_home}/lib/tools.jar"/>
             </classpath>
         </compile>
     </target>
@@ -264,7 +263,6 @@
             -->
             <classpath>
                 <pathelement location="${boot.jar}"/>
-                <pathelement location="${run_java_home}/lib/tools.jar"/>
                 <pathelement location="/System/Library/Java"/>
             </classpath>
             <jvmarg value="-Djavafx.embed.singleThread=true"/>
@@ -322,7 +320,6 @@
                 <pathelement location="${boot.jar}"/>
                 <pathelement location="${core.jar}"/>
                 <pathelement location="${extension.jar}"/>
-                <pathelement location="${run_java_home}/lib/tools.jar"/>
                 <pathelement location="${editor.jar}"/>
                 <pathelement location="${lang-stride.jar}"/>
                 <pathelement location="${test.build}"/>
@@ -359,7 +356,6 @@
             <classpath>
                 <path refid="bluej.class.path"/>
                 <pathelement location="${boot.jar}"/>
-                <pathelement location="${build_java_home}/lib/tools.jar"/>
             </classpath>
         </javadoc>
     </target>
